data is in extra directory, current code only 50K in size .. logging runs also